[rdar://116401230] feat: mobile viewport

--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -186,6 +186,7 @@ $font-styles: (
   ),
   nav-title-large: (
     large: (21_25_semibold, nav),
+    small: (nav_17_17_semibold, nav),
   ),
   nav-title-compact: (
     small: (nav_17_17_semibold, nav)
