[rdar://116401230] fix: Hierarchy

--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -206,7 +206,7 @@ $font-styles: (
     large: 14_18_semibold,
   ),
   hierarchy: (
-    large: 14_18_semibold,
+    large: 14_18,
   ),
   card-eyebrow-large: (
     large: 17_21_semibold,
