--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021-2023 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021-2024 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -66,6 +66,7 @@ $aside-width-left-border: 6px !default;
 $total-columns: 12 !default;
 
 // Navigator
+$nav-card-vertical-spacing: 10px;
 $nav-card-horizontal-spacing: 10px;
 $nav-card-horizontal-spacing-large: $nav-card-horizontal-spacing * 2;
 $nav-card-horizontal-spacing-small: $nav-card-horizontal-spacing * 0.5;
