Move vars from Card to global scope

--- a/src/styles/core/_helpers.scss
+++ b/src/styles/core/_helpers.scss
@@ -33,6 +33,17 @@
 }
 
 ////
+/// Applies size for static cards
+////
+@mixin static-card-size($card-height, $img-height) {
+  @include inTargetWeb {
+    --card-height: #{$card-height};
+    --card-details-height: #{$card-height - $img-height - ($details-padding-card * 2)};
+  }
+  --card-cover-height: #{$img-height};
+}
+
+////
 /// Used to apply the globalish styles that the ".section-content" class
 /// provided on /documentation pages
 ////
