--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -90,3 +90,7 @@ $localizedQuotes: (
 
 // Localized Fonts
 $localizedFonts: () !default;
+
+// Cards
+$details-padding-card: 17px;
+$content-margin-card: 4px;
