--- a/src/styles/core/_helpers.scss
+++ b/src/styles/core/_helpers.scss
@@ -35,10 +35,10 @@
 ////
 /// Applies size for static cards
 ////
-@mixin static-card-size($card-height, $img-height) {
+@mixin static-card-size($card-height, $img-height, $details-padding: $details-padding-card) {
   @include inTargetWeb {
     --card-height: #{$card-height};
-    --card-details-height: #{$card-height - $img-height - ($details-padding-card * 2)};
+    --card-details-height: #{$card-height - $img-height - ($details-padding * 2)};
   }
   --card-cover-height: #{$img-height};
 }
