--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -13,6 +13,8 @@ $globalnav-height: 44px;
 
 $form-focus-size: 4px;
 
+$generic-border-style: 1px solid var(--color-grid);
+
 // Border radius
 $border-radius: var(--border-radius, 4px) !default;
 $nano-border-radius: $border-radius !default;
