update other decl button background
update other decl button background

--- a/src/styles/core/colors/_light.scss
+++ b/src/styles/core/colors/_light.scss
@@ -176,6 +176,7 @@
   --color-tabnav-item-border-color: var(--color-fill-gray);
   --color-text: var(--color-figure-gray);
   --color-text-background: var(--color-fill);
+  --color-other-decl-button: var(--color-text-background);
   --color-tutorial-assessments-background: var(--color-fill-secondary);
   --color-tutorial-background: var(--color-fill);
   --color-tutorial-navbar-dropdown-background: var(--color-fill);
