--- a/src/styles/core/colors/_light.scss
+++ b/src/styles/core/colors/_light.scss
@@ -134,6 +134,7 @@
   --color-nav-dark-uiblur-expanded: #{change-color(dark-color(fill-tertiary), $alpha: 0.9)};
   --color-nav-dark-uiblur-stuck: #{change-color(dark-color(fill-tertiary), $alpha: 0.7)};
   --color-nav-dark-root-subhead: #{dark-color(tutorials-teal)};
+  --color-other-decl-button: var(--color-text-background);
   --color-runtime-preview-background: var(--color-fill-tertiary);
   --color-runtime-preview-disabled-text: #{change-color(light-color(figure-gray-secondary), $alpha: 0.6)};
   --color-runtime-preview-text: var(--color-figure-gray-secondary);
