Update maxWidth for large

--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -21,6 +21,7 @@ $breakpoint-attributes: (
     ),
     large: (
       min-width: 1251px,
+      max-width: 1919px,
       content-width: 980px,
     ),
     medium: (
