--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -21,7 +21,7 @@
 // import the current theme _base file. This file imports fonts and other global styles
 @import "~theme/styles/_theme_base.scss";
 
-#main {
+#app-main {
   outline-style: none;
 }
 
