Add colors for state hover in toggle background and border

--- a/src/styles/core/colors/_dark.scss
+++ b/src/styles/core/colors/_dark.scss
@@ -46,6 +46,8 @@
   --color-nav-expanded: var(--color-nav-dark-expanded);
   --color-nav-hierarchy-collapse-background: var(--color-nav-dark-hierarchy-collapse-background);
   --color-nav-hierarchy-collapse-borders: var(--color-nav-dark-hierarchy-collapse-borders);
+  --color-nav-hierarchy-collapse-background-hover: #{change-color(dark-color(fill-blue), $alpha: 0.5)};
+  --color-nav-hierarchy-collapse-borders-hover: #{dark-color(figure-blue)};
   --color-nav-hierarchy-item-borders: var(--color-nav-dark-hierarchy-item-borders);
   --color-nav-keyline: var(--color-nav-dark-keyline);
   --color-nav-link-color: var(--color-nav-dark-link-color);
