--- a/src/styles/core/colors/_light.scss
+++ b/src/styles/core/colors/_light.scss
@@ -103,7 +103,9 @@
   --color-nav-current-link: #{change-color(light-color(figure-gray))};
   --color-nav-expanded: #{light-color(fill)};
   --color-nav-hierarchy-collapse-background: #{light-color(fill-gray-tertiary)};
+  --color-nav-hierarchy-collapse-background-hover: #{change-color(light-color(fill-blue), $alpha: 0.05)};
   --color-nav-hierarchy-collapse-borders: #{dark-color(figure-gray-secondary)};
+  --color-nav-hierarchy-collapse-borders-hover: #{light-color(figure-blue)};
   --color-nav-hierarchy-item-borders: #{dark-color(figure-gray-secondary)};
   --color-nav-keyline: #{change-color(light-color(figure-gray), $alpha: 0.2)};
   --color-nav-link-color: #{light-color(figure-gray)};
@@ -120,8 +122,6 @@
   --color-nav-dark-color: #{dark-color(figure-gray)};
   --color-nav-dark-current-link: #{change-color(dark-color(figure-gray))};
   --color-nav-dark-expanded: #{dark-color(fill-tertiary)};
-  --color-nav-dark-hierarchy-collapse-background: #{dark-color(fill-gray-tertiary)};
-  --color-nav-dark-hierarchy-collapse-borders: #{light-color(figure-gray-secondary)};
   --color-nav-dark-hierarchy-item-borders: #{dark-color(fill-gray-tertiary)};
   --color-nav-dark-keyline: #{change-color(dark-color(fill-gray-tertiary), $alpha: 0.95)};
   --color-nav-dark-link-color: #{dark-color(figure-gray)};
