--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -31,6 +31,11 @@
 
 html {
   --scale-inline: 1;
+  scroll-behavior: smooth;
+
+  @media (prefers-reduced-motion: reduce) {
+    scroll-behavior: auto;
+  }
 }
 
 html[dir="rtl"] {
